serialize verifying key
